--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -73,7 +73,10 @@ jobs:
       with:
         python-version: 3.8
     - name: Install dependencies
-      run: python -m pip install -e .
+      run: |
+        # Temporary till a new release is created
+        python -m pip install git+https://github.com/5j9/wikitextparser.git
+        python -m pip install -e .
     - name: Install pytest
       run: python -m pip install pytest
     - name: Run pytest
