--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Flake8
-      uses: TrueBrain/actions-flake8@master
+      uses: TrueBrain/actions-flake8@v2
       with:
         path: tests wikitexthtml
 
